# linkura-cli

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  README.md  rust-toolchain.toml
.github/: release_template.md
.github/workflows/: build.yaml  release-build.yml  release.yaml
crates/api/: Cargo.toml
crates/api/docs/: endpoint_request_response.csv
crates/api/src/: lib.rs  macros.rs
crates/api/src/high_level/: mod.rs
crates/api/src/l4/: account.rs  activity_record.rs  announce.rs  archive.rs  box_event.rs  circle.rs  collection.rs  common.rs  feslive.rs  friend.rs  gacha.rs  gacha_web.rs  gift_shop.rs  gp_prize_exchange.rs  home.rs  in_quest_live.rs  item_exchange.rs  item_store.rs  jewel_shop.rs  mission.rs  mod.rs  out_quest_live.rs  out_quest_live_daily.rs  out_quest_live_dream.rs  out_quest_live_grade.rs  out_quest_live_grade_challenge.rs  out_quest_live_grand_prix.rs  out_quest_live_music_learning.rs  out_quest_live_raid_event.rs  petal_exchange.rs  present_box.rs  profile.rs  register.rs  rhythm_game.rs  rhythm_game_deck.rs  rhythm_game_grand_prix.rs  rhythm_game_live.rs  select_ticket_exchange.rs  serial_code.rs  shop.rs  (+7 more)
crates/api/src/model/: requests.rs  responses.rs
crates/common/: Cargo.toml
crates/common/src/: jwt.rs  lib.rs  log.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: als_downloader.rs  downloader.rs  lib.rs  mrs_downloader.rs  progress_ui.rs  r2_uploader.rs  tests.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/packet/: Cargo.toml  build.rs
crates/packet/src/: lib.rs
crates/packet/src/als/: audio.rs  client.rs  converter.rs  editor.rs  extract.rs  mod.rs  packet.rs  proto.rs  proto_diff.rs
crates/packet/src/als/proto/: analyzer.rs  application.rs  extension.rs  formatter.rs  mod.rs  reader.rs
crates/packet/src/als/proto/extension/: extract.rs  init_specs.rs  prefab_router.rs  update_handlers.rs
crates/packet/src/als/proto/extension/parsers/: camera.rs  character.rs  misc.rs  mod.rs  primitives.rs
crates/packet/src/mrs/: client.rs  packet.rs
crates/packet/src/proto/als/: datapack.proto
docs/ja/: README.md
docs/zh-CN/: README.md
locales/: app.yml  downloader.yml  motion.yml
src/: api.rs  main.rs
src/config/: interactive.rs  mod.rs
src/lib/: api.rs  log.rs  mod.rs  mrs.rs
src/lib/als/: client.rs  mod.rs  packet.rs
