[package]
name = "linkura-cli"
version = "0.1.0"
edition = "2024"
default-run = "linkura-cli"

[package.metadata.i18n]
available-locales = ["en", "zh", "ja"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "3.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = {version = "0.12.15", features = ["json", "blocking"]}
rand = "0.9.1"
regex = "1.11.1"
spinoff = "0.8.0"
chrono = "0.4.41"
p256 = { version = "0.13.2", features = ["ecdh"] }

# No need for concurrent for now
tokio = { version = "1.44.2", features = ["full"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex = "0.4.3"
ctrlc = "3.4.7"
indicatif = "0.17.11"
rust-i18n = "3.1.5"

[lib]
name = "linkura_client"
path = "src/lib/mod.rs"

[[bin]]
name = "mrs-client"
path = "src/bin/mrs-client.rs"

[[bin]]
name = "als-client"
path = "src/bin/als-client.rs"

