[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"
default-members = ["bin/*"]


[workspace.package]
edition = "2024"
authors = ["ChocoLZS <chocoie@outlook.com>"]
repository = "https://github.com/ChocoLZS/linkura-cli"
license = ""

[workspace.package.metadata.i18n]
available-locales = ["en", "zh", "ja"]

[workspace.dependencies]
linkura-api = { path = "crates/api" }
linkura-packet = { path = "crates/packet" }
linkura-common = { path = "crates/common" }


tracing = "0.1.41"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.9.1"
regex = "1.11.1"
chrono = "0.4.41"
tokio = { version = "1.44.2", features = ["full"] }
rust-i18n = "3.1.5"
base64 = "0.22.1"
ctrlc = "3.4.7"

reqwest = {version = "0.12.15", features = ["json", "blocking", "rustls-tls"], default-features = false}

