[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"
default-members = ["bin/*"]


[workspace.package]
edition = "2024"
authors = ["ChocoLZS <chocoie@outlook.com>"]
repository = "https://github.com/ChocoLZS/linkura-cli"
license = ""

[workspace.dependencies]
linkura-api = { path = "crates/api" }
linkura-packet = { path = "crates/packet" }
linkura-common = { path = "crates/common" }
linkura-downloader = { path = "crates/downloader" }
linkura-i18n = { path = "crates/i18n" }


tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.9.1"
regex = "1.11.1"
chrono = "0.4.41"
tokio = { version = "1.44.2", features = ["full"] }
rust-i18n = "3.1.5"
base64 = "0.22.1"
ctrlc = "3.4.7"
indicatif = "0.17.11"
async-trait = "0.1.88"
url = "2.0"
hex = "0.4.3"

reqwest = {version = "0.12.15", features = ["json", "blocking", "rustls-tls"], default-features = false}

prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"
