[package]
name = "linkura-api"
version = "0.0.0"
description = "Linkura API"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
anyhow.workspace = true
base64.workspace = true
tracing.workspace = true
regex.workspace = true
reqwest.workspace = true