[package]
name = "linkura-downloader"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indicatif.workspace = true
async-trait.workspace = true

futures = "0.3"
url.workspace = true
chrono.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex.workspace = true
base64.workspace = true
