[package]
name = "linkura-packet"
version = "0.0.0"
description = "Linkura Packet"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex = "0.4.3"