[package]
name = "linkura-packet"
version = "0.0.0"
description = "Linkura Packet"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true

p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex.workspace = true
sha2 = "0.10"

[build-dependencies]
prost-build.workspace = true